# austial

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
austial/: __init__.py
austial/cli/: main.py  naming.py
austial/cli/generators/: __init__.py  app_module_patcher.py  base.py  controller_gen.py  module_gen.py  new_project.py  resource_gen.py  service_gen.py
austial/cli/templates/controller/: controller.py.j2
austial/cli/templates/module/: module.py.j2
austial/cli/templates/project/: app_controller.py.j2  app_module.py.j2  app_service.py.j2  env_example.j2  main.py.j2  pre_commit_config.yaml.j2  pyproject.toml.j2  readme.j2
austial/cli/templates/project/modules/health/: health_dto.py.j2  health_module.py.j2  health_service.py.j2
austial/cli/templates/project/modules/health/guards/: api_key_guard.py.j2
austial/cli/templates/project/tests/e2e/: app_e2e_spec.py.j2
austial/cli/templates/project/tests/unit/: health_service_spec.py.j2
austial/cli/templates/resource/: controller.py.j2  create_dto.py.j2  entity.py.j2  module.py.j2  service.py.j2  update_dto.py.j2
austial/cli/templates/service/: service.py.j2
austial/common/: __init__.py  enums.py  logger.py
austial/common/decorators/: __init__.py  controllers.py  filters.py  guards.py  injectable.py  interceptors.py  modules.py  params.py  pipes.py
austial/common/exceptions/: __init__.py  http_exceptions.py
austial/common/filters/: __init__.py  all_exceptions_filter.py  base.py
austial/common/guards/: __init__.py  base.py
austial/common/interceptors/: __init__.py  base.py  transform_interceptor.py
austial/common/middleware/: __init__.py  base.py  logging_middleware.py
austial/common/pipes/: __init__.py  validation_pipe.py
austial/config/: __init__.py  config_module.py  config_service.py
austial/core/: __init__.py  app.py  container.py  dynamic_module.py  exception_dispatch.py  factory.py  metadata.py  module_scanner.py  reflector.py  router_builder.py
austial/database/: __init__.py  database_module.py
austial/terminus/: __init__.py  database_health_indicator.py  health_check_service.py  health_indicator.py  memory_health_indicator.py
austial/testing/: __init__.py  testing_module.py
src/: app_controller.py  app_module.py  app_service.py  main.py
src/modules/cats/: cats_controller.py  cats_module.py  cats_service.py
src/modules/cats/dto/: create_cats_dto.py  update_cats_dto.py
src/modules/cats/entities/: cats_entity.py
src/modules/health/: health_controller.py  health_dto.py  health_module.py  health_service.py
tests/e2e/: app_e2e_spec.py
tests/unit/: health_service_spec.py
